summaries/07_final/prep_daily_log.txt
START PREP 2025-09-12 13:20:32 EDT
  File "/home/runner/work/baseball_for_mat/baseball_for_mat/scripts/prepare_daily_projection_inputs.py", line 1
    name: 07_final_projections
            ^
SyntaxError: invalid decimal literal
